# nscldaq

./: .gitignore  .gitmodules  11.1-conversion.includes  ChangeLog  Changelog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  config.h.in  configure.ac  configure.in  daqsetup.bash.in  dotests  gentarballs  introduction.xml  ltmain.sh  nscldaq-12.0dev.komodoproject  nscldaq-varmgr.komodoproject  nscldaq.in  tcl++incorp.sh  testBuildTarball
base/CopyrightTools/: CopyrightNotice.h  License.tcl  License.txt  Makefile  Makefile.am  copyrightnotice.xml  test
base/dataflow/: BlockingTests.cpp  CRemoteAccess.cpp  CRemoteAccess.h  CRingBuffer.cpp  CRingBuffer.h  CRingCommand.cpp  CRingCommand.h  CRingMaster.cpp  CRingMaster.h  Makefile.am  ManageTest.cpp  RemoteTests.cpp  RingMaster.tcl  StaticTests.cpp  TransferTests.cpp  consumer.cpp  crmastertests.cpp  ringbuffer.xml  ringbuffer_man.xml  ringlib.xml  ringmaster.xml  ringpipes.xml  ringprimitives.xml  ringtostdout.cpp  shm.xml  stdintoring.cpp  stdintoringsw.ggo  tclring.xml  testcommon.cpp
base/exception/: ErrnoException.cpp  ErrnoException.h  Exception.h  Makefile  Makefile.am  Makefile.in  MonitorException.h  StateException.h  StreamIOError.h  exceptions.xml
base/os/: Makefile.am  daqshm.cpp  detachTests.cpp  os.cpp  os.h  shm.xml
base/security/: AccessListCheck.cpp  AccessListCheck.h  Authenticator.h  FdInteractor.cpp  HostListCheck.cpp  IOInteractor.cpp  Interactor.cpp  Interactor.h  Makefile.am  Makefile.in  PasswordCheck.cpp  PasswordCheck.h  StringInteractor.cpp  UnixUserCheck.cpp  UnixUserCheck.h
bridge/: ChangeLog  Makefile.am  bridge  configure.in  spectrodaqToStdout.cpp  stdinToSpdaqLite.cpp
bufdump/: CHANGELOG  Conceptual Design.rtf  EventDumper.htm  INSTALL  Makefile.am  README  SourceTests.test  bitPatternExerciser.tcl  bootstrap  bufdump.eps  bufdump.kpf  bufdump.tcl  bufdumpDialogExerciser.tcl  bufdumpDialogs.tcl  bufdumpWidgets.tcl  bufferAssembly.tcl  bufferAssemblyTests.test  bufferTests.test  concepts.xml  configure.in  countingsource.cpp  dataSources.tcl  datasource.html  entityFinderTests.test  evenformatTests.test  eventData.tcl  eventFileVariableTests.test  extending.xml  file.html  fileexit.html  filemenu.eps  filemenu.xml  fileopen.html  filepackets.html  filplugin.html  filter.html  filterDialogExerciser.tcl  filtercallouts.eps  filterfilter.html  filtermenu.eps  (+32 more)
bufdump/bwidgets/: bitmap.tcl  color.tcl  dropsite.tcl  init.tcl  tree.tcl  utils.tcl
bufdump/iwidgets/: iwidgets.tcl
bufdump/tcllib/: pkgIndex.tcl
clients/: .cproject  .project  CHANGELOG  Directories.include  LICENSE  Makefile.am  Makefile.in  README  bootstrap  config.h.in  configure  configure.in  configure.scan  daqman  mkpackage.tcl
clients/AlarmDisplay/: AlarmDisplay  AlarmDisplay.tcl  AlarmServerApp.cpp  CAlarmServer.cpp  CAlarmServer.h  CAlarmServerException.cpp  CAlarmServerException.h  CGDBMException.cpp  CGDBMException.h  Makefile.am  Makefile.in  build.sh  extras  installpkg  tablelist.tcl  tablelistSortByColumn.tcl  tablelistWidget.tcl
clients/CopyrightTools/: CopyrightNotice.cpp  CopyrightNotice.h  License.tcl  License.txt  Makefile.am  Makefile.in  build.sh  copyrightnotice.3daq  test.cpp
clients/DeviceSupport/: 1x90AcqModeTests.cpp  1x90AdjustTests.cpp  1x90ConstructTests.cpp  1x90DataTests.cpp  1x90MatchTiming.cpp  1x90MiscTests.cpp  1x90ReadTests.cpp  1x90ReadoutModes.cpp  1x90RegisterTests.cpp  1x90ResEdgeTests.cpp  1x90TerminationTests.cpp  1x90TriggerTimeTagTests.cpp  1x90geotests.cpp  Asserts.h  CAENcard.cpp  CAENcard.h  CAENcard_767.cpp  CAENcard_767.h  CBD8210.h  CCAENChain.cpp  CCAENChain.h  CCAENV1x90.cpp  CCAENV1x90.h  CCAENV1x90Data.h  CCAENV560.cpp  CCAENV560.h  CCAENV560Registers.h  CCAENV830.cpp  CCAENV830.h  CCAENV977.cpp  CCAENV977.h  CCAMACScalerLRS2551.cpp  CCAMACScalerLRS2551.h  CCAMACScalerLRS4434.cpp  CCAMACScalerLRS4434.h  CCAMACStatusModule.cpp  CCAMACStatusModule.h  CCAMACTrigger.cpp  CCAMACTrigger.h  CCamac.cpp  (+49 more)
clients/EventLog/: Makefile.am  Makefile.in  Makefile.saved  build.sh  eventlog.1  eventlog.cpp  eventlog.htm
clients/Exception/: CRangeError.h  ErrnoException.cpp  Exception.cpp  Exception.h  Makefile.am  Makefile.in  RangeError.cpp  StreamIOError.cpp  StreamIOError.h  TestRunner.cpp  rangeerror.3daq  streamioerror.3daq  testErrnoException.cpp
clients/Ftp/: Makefile.am  Makefile.in  Makefile.saved  ftplib.c  ftplib.h  libftp.so.3.1  qftp
clients/HPProductionReadout/: AccessListCheck.h  AuthTokenCheck.cpp  Authenticator.h  CBadTransitionException.cpp  CBeginCommand.cpp  CBeginCommand.h  CCAENV977Status.h  CCAENV977Trigger.cpp  CCamac.h  (+77 more)
dash/: Makefile  acconfig.h  config.make.in  configure  configure.in  daqconfig.h.in
dashdaq/: Makefile.am  configure.in  main.oxy
docbuild/: Makefile.am  docbuilder.tcl  tutorial.xml
llnlReadout/: CControlModule.h  CGDG.cpp  CGDG.h  CHANGELOG  CModuleCommand.cpp  CTheApplication.cpp  CTheApplication.h  Globals.cpp  Globals.h  Makefile.am  TclServer.cpp  config.h  configure.in
main/: 11.1-conversion.files  ChangeLog  INSTALL  LICENSE  Makefile.am  bootstrap  configure.ac  daqsetup.bash.in  dotests  introduction.xml  nscldaq.in  tcl++incorp.sh  testBuildTarball
nextgen/: ChangeLog  Changelog  Makefile.am  aclocal.m4  config.h.in  configure  configure.ac  configure.in  configure.in.old  introduction.xml  tcl++incorp.sh  testBuildTarball
spectrodaq-pregt/: HISTORY  LICENSE.spectrodaq  Makefile  RELEASE  RELEASECLIENT  config.cache  config.make  config.make.in  config.status  configure  configure.in  daqconfig.h  svn-commit.tmp
utilities/: Makefile.am  StringsToIntegers.cpp
vmusb/: CVMUSB.cpp  CVMUSB.h  CVMUSBReadoutList.cpp  CVMUSBReadoutList.h  Makefile.am  conTests.cpp  configure.in  regTests.cpp
vmusbserver/: CImmediateListCommand.cpp  CImmediateListCommand.h  CVMUSB.cpp  CVMUSB.h  CVMUSBModule.cpp  CVMUSBModule.h  CVMUSBPackage.cpp  CVMUSBReadoutList.h  CVMUSBRemote.cpp  CVMUSBRemote.h  Makefile.am  Makefile.original  TCLObjectProcessor.h  config.h  configure.ac  pkgIndex.tcl  server.tcl  sources  tclsources
(+8890 files in other folders)
