#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([utilities/controlpush/CSocket.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LIBTOOL


AC_CHECK_LIB([X11], [XSetWindowBackground])
AC_CHECK_LIB([Xt], [XtManage])
AC_CHECK_LIB([cppunit], [_ZN7CppUnit12XmlOutputterD1Ev])
AC_CHECK_LIB([pub], [xrealloc])


AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h malloc.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UID_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.

AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([dup2 gethostbyaddr gethostbyname gettimeofday inet_ntoa memmove memset regcomp socket strchr strcspn strdup strerror strspn strtol])

# Automake:

AM_INIT_AUTOMAKE([])

AC_CONFIG_FILES([Makefile
                 base/CopyrightTools/Makefile
                 base/cvt/Makefile
                 base/exception/Makefile
                 base/headers/Makefile
                 base/security/Makefile
                 base/tclplus/Makefile
                 base/tclwidgets/Makefile
                 base/uri/Makefile
                 servers/portmanager/Makefile
                 utilities/chanlog/Makefile
                 utilities/controlpush/Makefile
                 utilities/daqstart/Makefile
                 utilities/dvdburn/Makefile
                 utilities/epicsdisplay/Makefile
                 utilities/scalerdisplay/Makefile
                 utilities/sequencer/Makefile
                 utilities/tclserver/Makefile])
AC_OUTPUT

