bin_PROGRAMS = spectrodaqToStdout stdinToSpdaqLite

spectrodaqToStdout_SOURCES = spectrodaqToStdout.cpp

spectrodaqToStdout_CXXFLAGS = @SPECTRODAQ_CFLAGS@
spectrodaqToStdout_LDADD    = @SPECTRODAQ_LDFLAGS@


stdinToSpdaqLite_SOURCES = stdinToSpdaqLite.cpp

stdinToSpdaqLite_CXXFLAGS = @SPDAQLITE_CFLAGS@
stdinToSpdaqLite_LDADD    = @SPDAQLITE_LDFLAGS@





