#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(./spectrodaqToStdout.cpp)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER([config.h])
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE(bridge, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST


#  Now check for the spectrodaq-lite directory tree
#  --with-spdaqlite-home   Allows the user to explicitly set this.
#
#  We will look for spdaqlite-conf in bin subdirectories of all the
#  base directories in the spdaqlitedirectories list.
#  It will be used to create the Makefile symbols:
#
#  SPDAQLITE_CFLAGS  - Compilation flags.
#  SPDAQLITE_LDFLAGS - Load flags.
#

spdaqlitedirectories="/usr/opt/spectrodaq-lite \
		      /usr/opt/spdaqlite       \
		      /usr/local	       \
		      /usr"

spdaqlite_dir=""
AC_MSG_CHECKING([For Spectrodaq-lite home directory])
AC_ARG_WITH(spdaqlite-home,
	[  --with-spdaqlite-home=Path to spectrodaq-lite installation],
	[spdaqlite_dir=$withval])

for dir in $spdaqlitedirectories
do
  if test "$spdaqlite_dir" = ""
  then
        AC_CHECK_FILE([$dir/bin/spdaqlite-conf],
		      [spdaqlite_dir=$dir])

  fi
done

#  spdaqlite_dir should be non blank and the directory that has
#  spdaqlite:

if test "$spdaqlite_dir" = ""
then
  AC_MSG_ERROR([Failed to find spectrodaq-lite, help me with --with-spdaqlite-dir])
else
	AC_MSG_RESULT([Found in $spdaqlite_dir])
	SPDAQLITE_CFLAGS=`$spdaqlite_dir/bin/spdaqlite-conf --cflags`
	SPDAQLITE_LDFLAGS=`$spdaqlite_dir/bin/spdaqlite-conf --libs`
fi


#  Now check for the spectrodaq directory tree
#  --with-spectrodaq-home allows the user to explicitly set this.
#
#  We will look for spectrodaq-conf in bin subdirectories of all
#  the base directories in the spdaqdirectories list.
#  It will then be used to create the Makefile symbols:
#
#  SPECTRODAQ_CFLAGS   - Compilation flags
#  SPECTRODAQ_LDFLAGS  - Load flags.
#
spdaqdirectories="/usr/opt/spectrodaq-pregt		\
		  /usr/opt/spectrodaq                   \
		  /usr/local				\
		  /usr"
spdaq_dir=""
AC_MSG_CHECKING([For Spectrodaq home directory])
AC_ARG_WITH(spectrodaq-home,
	[  --with-spectrodaq-home=Path to Spectrodaq installation],
	[spdaq_dir=$withval])

for dir in $spdaqdirectories
do
  if test "$spdaq_dir" = ""
  then
      AC_CHECK_FILE([$dir/bin/spectrodaq-conf],
	            [spdaq_dir=$dir])
  fi
done

if test "$spdaq-dir" = ""
then
    AC_MSG_ERROR([Failed to find Spectrodaq help me with --with-spectrodaq-home])
else
    AC_MSG_RESULT([Found in $spdaq_dir])
    SPECTRODAQ_CFLAGS=`$spdaq_dir/bin/spectrodaq-conf --cflags`
    SPECTRODAQ_LDFLAGS=`$spdaq_dir/bin/spectrodaq-conf --libs`
fi


#  Makefile variables/macros:
#

AC_SUBST(SPDAQLITE_CFLAGS)
AC_SUBST(SPDAQLITE_LDFLAGS)

AC_SUBST(SPECTRODAQ_CFLAGS)
AC_SUBST(SPECTRODAQ_LDFLAGS)

#



AC_OUTPUT(Makefile)



